# audio-purifai

./: .gitignore  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: release-build.yml
scripts/: fetch-binaries.ps1  fetch-binaries.sh  setup-env.ps1  setup-env.sh  worker.py
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  installer.nsi  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  commands.rs  lib.rs  main.rs  queue.rs  worker.rs
src/components/: DropZone.tsx  FileRow.tsx  QueueSummary.tsx  Settings.tsx  TitleBar.tsx
src/lib/: api.ts  events.ts  format.ts  types.ts
