[package]
name = "audio-enhancer"
version = "0.2.1"
description = "Bulk WAV enhancer desktop app using DeepFilterNet2"
authors = ["Audio Enhancer Team"]
edition = "2021"

[lib]
name = "audio_enhancer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.0.0", features = [] }
tauri-plugin-shell = "2.0.0"
tauri-plugin-dialog = "2.0.0"
tokio = { version = "1", features = ["time", "sync", "process", "macros", "io-util", "rt"] }
hound = "3.5.1"
thiserror = "1"
